<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.ivadimn.android0107.fragments.PersonFragment">

    <ImageView
        android:id="@+id/person_photo_id"
        android:layout_width="@dimen/big_image_width"
        android:layout_height="@dimen/big_image_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/view_margin"
        android:scaleType="centerCrop"
        tools:src="@drawable/person_big"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/view_margin">
        <EditText
            android:id="@+id/person_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_edit_color"
            android:inputType="text"
            android:hint="@string/person_name"
            android:enabled="false"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/view_margin">
        <EditText
            android:id="@+id/person_phone_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/person_phone"
            android:textColor="@color/text_edit_color"
            android:enabled="false"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/view_margin">
        <EditText
            android:id="@+id/person_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/person_email"
            android:textColor="@color/text_edit_color"
            android:enabled="false"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_marginBottom="@dimen/view_margin"
        android:layout_weight="1">
        <EditText
            android:id="@+id/person_hobby_id"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:hint="@string/person_hobbys"
            android:textColor="@color/text_edit_color"
            android:enabled="false"
            />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>